--- a/code/vehicle-transciever/src/test.html
+++ b/code/vehicle-transciever/src/test.html
@@ -23,10 +23,12 @@
                         if (auto_refresh > 0) {
                             auto_refresh = 0;
                             button.innerHTML = "Auto Refresh: OFF"
+                            button.style = "background-color: grey"
                             document.querySelectorAll('.deacOnRefresh').forEach(element => element.disabled = false);
                         } else {
                             auto_refresh = 1;
                             button.innerHTML = "Auto Refresh: ON"
+                            button.style = "background-color: #4CAF50"
                             document.querySelectorAll('.deacOnRefresh').forEach(element => element.disabled = true);
                         }
                     }
@@ -89,10 +91,108 @@
                 });
                 
             </script>
+    <style>
+      button {
+        border: 5px solid green;
+        background-color: #4CAF50;
+        color: white;
+        padding: 15px 32px;      
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        /* box-shadow: 5px 10px 8px #888888; */
+      }
+
+      button:hover:enabled {
+        background-color: lightgreen;
+        color: white;
+      }
+
+      button:disabled,
+      button[disabled] {
+        border: 5px solid black;
+        background-color: grey;
+        color: white;
+        padding: 15px 32px;      
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: not-allowed;
+        /* box-shadow: 5px 10px 8px red; */
+      }
+
+      
+
+.glow-on-hover {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+    </style>
 	</HEAD>
 <BODY style="font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;">
     <h2>Manual Control:</h2>
-    <button data-target="vehicle" data-command="forward">Forward</button>
+    <button class="glow-on-hover">HOVER ME, THEN CLICK ME!</button>
+    <button class="glow-on-hover" data-target="vehicle" data-command="forward">Forward</button>
 	<button data-target="vehicle" data-command="backward">Backwards</button>
 	<button data-target="vehicle" data-command="left">Left</button>
 	<button data-target="vehicle" data-command="right">Right</button>
